@@ -4,15 +4,17 @@ Hash: SHA256
 DIST rails_best_practices-0.4.0.gem 21504 RMD160 4b0e70206cd123df1ef62cd5dc16708b974a9046 SHA1 1e0ba3cdd0ae7fa6a2b8ebace43907fd4cd8ff6e SHA256 ba0116a8e5a8bdea96a540d9113c1dd44e132ac71ace58963fd4ee1c9f9de245
 DIST rails_best_practices-0.7.1.gem 45056 RMD160 807cd2403a514bc61cd3f0658dd52035446116a6 SHA1 6a5ab8744a84f9b74d9d2334623b12c461974fb3 SHA256 dce38733e505a28905da6e31c0242cebdd050401f8cf07fb1998bee9e63ab419
 DIST rails_best_practices-0.8.2.gem 49152 RMD160 50e736f1debcc78cd36dbe4f46e509f537d88a20 SHA1 52166bb37b093f2e74f1415710162ef93d935a4e SHA256 c7cd552679e793741f575a35d49611f8ef4d8935f56e7a675010c7dc01920d29
+DIST rails_best_practices-0.9.0.gem 49664 RMD160 141173c00b9e1b50a7cd383cc8b9c5e4f691dfdb SHA1 b54fe05bdb77307a6a51a818ce0e2287c76e4a7e SHA256 37d1c19d13ed1c917316be85c70435bd9b3f1c7e0fb9d510ff61ec6bea17df26
 EBUILD rails_best_practices-0.4.0.ebuild 763 RMD160 6a42abe9c79867346433de5038133e2c427ec9b0 SHA1 0d085007b557725291f96940c61ed14c6c3a9916 SHA256 c8bad2bf81dcd59b53a9683aea1ec5268e8959015a744de02fa337c0cbd289b9
 EBUILD rails_best_practices-0.7.1.ebuild 972 RMD160 48c19520d7a38a2c41f7fa3fc24de20c585d0fd4 SHA1 0e770cd477a02aafc9ce92a8d7fdcaf0119670ac SHA256 7c4d111520ebb967f6823028eec5a0c90f90e566bd85ea2295fa77051b9a88e3
 EBUILD rails_best_practices-0.8.2.ebuild 876 RMD160 24a783f59b3707f8e2835d7a87872bdaf382313a SHA1 79d4d10eb8e867d6e6bf043c5e23cf361e9e8184 SHA256 1f66ea6249a98403a1730f1dd6ba31bf72a3e504a01e34fa4ec452981cec6170
-MISC ChangeLog 1187 RMD160 159a424853735211f9359855952f64de7a98a943 SHA1 96eaa3ea89deff5bafd9474fc984f4f552446622 SHA256 6b6064bd5d70af4281405bb75607b1de0ea9778b9f9c7b714efbead037fa3651
+EBUILD rails_best_practices-0.9.0.ebuild 876 RMD160 24a783f59b3707f8e2835d7a87872bdaf382313a SHA1 79d4d10eb8e867d6e6bf043c5e23cf361e9e8184 SHA256 1f66ea6249a98403a1730f1dd6ba31bf72a3e504a01e34fa4ec452981cec6170
+MISC ChangeLog 1335 RMD160 6a489ee24eea4b3b354fd99755bb8ac9b5aa5014 SHA1 336cd24dad9d5e459c803cdc799d780b88a0f5fd SHA256 6c139c0bec406511673be57889dbd704effd050e361445c08fcd0e134c62f7da
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk26qBAACgkQrnu0mw69JkqAnwD9GzZ8ZX2aT5I8vEEjK8ui8hqG
-FRtFVKKYtvk+xR5FuwkA/1RSwGzRi+LHyupPMmr9vGvdNX9Xg0bndC57/92ljp1x
-=jNls
+iF4EAREIAAYFAk3T1ZcACgkQrnu0mw69JkpNAAD/ZDiQmzDD8UkXMnmlZkIx2SvI
+8pxmUeeL9vf38sjaqTwBAISCRv81ls9bqua/smmvb+1ar031qNzY0MDiqTjqnaFb
+=0YnT
 -----END PGP SIGNATURE-----
