@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*rails_best_practices-0.9.0 (18 May 2011)
+
+  18 May 2011; Hans de Graaff <graaff@gentoo.org>
+  +rails_best_practices-0.9.0.ebuild:
+  Version bump.
+
 *rails_best_practices-0.8.2 (29 Apr 2011)
 
   29 Apr 2011; Hans de Graaff <graaff@gentoo.org>
